# libsvgtoico

./: Cargo.toml  README.md
include/: svgtoico.h
src/: lib.rs
